Apply Phil's fix for the facet counts
Make them display a bit better when the label is too long to fit.

--- a/_default/web/css/customer.css
+++ b/_default/web/css/customer.css
@@ -267,6 +267,10 @@ section.search-cart {
     border-bottom: dotted 1px #eeefea;
 }
 
+.search-facets .search-facet li {
+    clear: right;
+}
+
 .search-facets .badge-default {
     color: #636c72; /* == text-muted */
     background-color: #eeefea;
